Fixing some size inconsistencies caused by the previous oversized chevron fix on mobile (Iphone SE).

--- a/Lyceum/static/styles/comm.css
+++ b/Lyceum/static/styles/comm.css
@@ -1195,6 +1195,9 @@ input:focus:-ms-input-placeholder {
     .mobile-header {
         display: flex;
         justify-content: center;
+        align-items: center;
+        height: 100%;
+        box-sizing: border-box;
     }
 
     .mobile-header h2 {
